# SOLNP_plus

./: .gitignore  .gitmodules  CMakeLists.txt  FindOSQPConf.cmake  README.md  SOLNP_installation.md  make_solnp.m
Old Matlab Version/: solnp.m  subnp.m
SOLNP USER GUIDE/: SOLNP USER GUIDE.html
SOLNP+ User Guide/: SOLNP+ User Guide.html  index.html
SOLNP+ User Guide/image-resources/: 40eb0e40-5ebd-4ace-9870-dbccab68cb1c  d69a2714-59d0-4ad9-8421-6d7ca39afffa  fb057011-59bf-4054-96b2-cf6ceb1e9dcc
include/: def_solnp_lapack.h  der_info.h  linalg.h  linsys.h  qp_solver.h  rescue.h  solnp.h  solnp_glbopts.h  solnp_util.h  subnp.h
interface/C/: CMakeLists.txt  P78_example.c  P93_example.c  demo.c  rosenbrock_example.c
interface/Julia/SOLNP/: Manifest.toml  Project.toml
interface/Julia/SOLNP/src/: SOLNP.jl
interface/Julia/SOLNP/src/utilities/: SOLNP_CONST.jl  solnp.jl
interface/Julia/SOLNP/test/: Manifest.toml  Project.toml  test.jl
interface/Matlab/: make_solnp.m
interface/Matlab/test/Circle/: cost.m
interface/Matlab/test/Cutest/BEALENE/: BEALENE.m  BEALENE_pdfo.m  cost.m
interface/Matlab/test/Cutest/BT1/: BT1.m  cost.m
interface/Matlab/test/Cutest/BT3/: BT3.m
interface/Matlab/test/Cutest/BT9/: BT9.m
interface/Matlab/test/Cutest/COOLHANS/: COOLHANS_pdfo.m  cost.m
interface/Matlab/test/Cutest/Copy_of_BT9/: cost.m
interface/Matlab/test/Cutest/POWELLBS/: POWELLBS.m  cost.m
interface/Matlab/test/HS_noise/: solnp_tesths.m
interface/Matlab/test/HS_noise/P106/: P106.m  cost.m
interface/Matlab/test/HS_noise/P11/: NOMADP11.m
interface/Matlab/test/HS_noise/P26/: NOMADP26.m  P26.m  PDFOP26.m
interface/Matlab/test/HS_noise/P28/: NOMADP28.m  P28.m  PDFOP28.m
interface/Matlab/test/HS_noise/P38/: NOMADP38.m  PDFOP38.m  cost.m
interface/Matlab/test/HS_noise/P40/: P40.m
interface/Matlab/test/HS_noise/P46/: NOMADP46.m  cost.m
interface/Matlab/test/HS_noise/P56/: NOMADP56.m  PDFOP56.m  cost.m
interface/Matlab/test/HS_noise/P78/: NOMADP78.m  P78.m  PDFOP78.m
interface/Matlab/test/HS_noise/P79/: P79.m  PDFOP79.m  cost.m
interface/Matlab/test/HS_noise/P80/: NOMADP80.m  PDFOP80.m  cost.m
interface/Matlab/test/HS_noise/P81/: NOMADP81.m  P81.m  PDFOP81.m
interface/Matlab/test/HS_noise/P83/: NOMADP83.m
interface/Matlab/test/HS_noise/P84/: PDFOP84.m  cost.m
interface/Matlab/test/HS_noise/P93/: P93.m
interface/Matlab/test/HS_withoutnoise/: withoutnoise-data.mat
interface/Matlab/test/HS_withoutnoise/P106/: NOMADP106.m  P106.m  cost.m
interface/Matlab/test/HS_withoutnoise/P11/: NOMADP11.m  P11.m  PDFOP11.m  cost.m
interface/Matlab/test/OLS/: cost.m
interface/Matlab/test/Pharmacodynamics for Tumor Growth/: 200-1.1-65 data SOLNP+.mat  200-1.1-65.fig  SOLNP_tumor.m  cost.m  pdfo_tumor.m  plot_subroutine.m
interface/Matlab/test/Rosenbrock/: Rb_pdfo.m  Rosenbrock.m  cost.m
interface/Python/: SOLNP_CONST.py  pysolnp.py  setup.py
interface/Python/test/: test.py
julia/SOLNP/src/utilities/: SOLNP_CONST.jl  solnp.jl
julia/SOLNP/test/: cost.jl  test.jl
python/: pysolnp.py  setup.py
python/pysolnp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/test/: test.py
source/: Rescue.c  der_info.c  linalg.c  linsys.c  qp_solver.c  solnp.c  solnp_c_interface.c  solnp_mex.c  solnp_py.c  solnp_util.c  subnp_qp.c  util.c
test/Circle/: circle_ineq.m  circle_ineq_pdfo.m
test/Cutest/BROWNBSNE/: BROWNBSNE.m  cost.m
test/Cutest/BT3/: cost.m
test/Cutest/BT9/: cost.m
test/Cutest/BYRDSPHR/: BYRDSPHR.m  cost.m
test/Cutest/COOLHANS/: COOLHANS.m
test/Cutest/Copy_of_BT9/: BT9.m
test/HS_noise/: noise-data-o.mat  noise-data.mat  nomad_tesths.m  pdfo_tesths.m  solnp_tesths.m
test/HS_noise/P106/: NOMADP106.m  P106.m  PDFOP106.m
test/HS_noise/P11/: NOMADP11.m  P11.m  PDFOP11.m  cost.m
test/HS_noise/P26/: cost.m
test/HS_noise/P28/: cost.m
test/HS_noise/P38/: P38.m
test/HS_noise/P40/: NOMADP40.m  PDFOP40.m  cost.m
test/HS_noise/P46/: NOMADP46.m  P46.m  PDFOP46.m
test/HS_noise/P56/: P56.m
test/HS_noise/P78/: NOMADP78.m  cost.m
test/HS_noise/P79/: NOMADP79.m  PDFOP79.m
test/HS_noise/P80/: P80.m
test/HS_noise/P81/: PDFOP81.m  cost.m
test/HS_noise/P83/: NOMADP83.m  P83.m  PDFOP83.m  cost.m
test/HS_noise/P84/: NOMADP84.m  P84.m
test/HS_noise/P93/: NOMADP93.m  PDFOP93.m  cost.m
test/HS_withoutnoise/: pdfo_tesths.m  solnp_tesths.m  withoutnoise-data.mat
test/HS_withoutnoise/P106/: P106.m  PDFOP106.m
test/HS_withoutnoise/P11/: NOMADP11.m  P11.m  cost.m  test.m
test/HS_withoutnoise/P26/: NOMADP26.m  cost.m
test/HS_withoutnoise/P28/: NOMADP28.m  P28.m  cost.m
test/HS_withoutnoise/P38/: NOMADP38.m  P38.m
test/HS_withoutnoise/P40/: P40.m
test/HS_withoutnoise/P46/: P46.m  PDFOP46.m  cost.m
test/HS_withoutnoise/P56/: NOMADP56.m  PDFOP56.m  cost.m
test/HS_withoutnoise/P6/: cost.m  der_info.m
test/HS_withoutnoise/P78/: NOMADP78.m  P78.m  PDFOP78.m  cost.m
test/HS_withoutnoise/P79/: NOMADP79.m  P79.m  PDFOP79.m  cost.m
test/HS_withoutnoise/P80/: NOMADP80.m  P80.m  PDFOP80.m
test/HS_withoutnoise/P81/: P81.m
test/HS_withoutnoise/P83/: NOMADP83.m  cost.m
test/HS_withoutnoise/P84/: NOMADP84.m  P84.m  PDFOP84.m
test/HS_withoutnoise/P93/: NOMADP93.m  P93.m  PDFOP93.m  cost.m
test/OLS/: OLS.m
test/P100/: P100.m  cost.m
test/P104/: P104.m  cost.m
test/P106/: P106.m  cost.m
test/P111/: P111.m  cost.m
test/P26/: P26.m  cost.m
test/P27/: P27.m  cost.m
test/P28/: P28.m  cost.m
test/P32/: P32.m  cost.m
test/P34/: P34.m  cost.m
test/P38/: P38.m  cost.m
test/P46/: P46.m  cost.m
test/P6/: P6.m  cost.m
test/P60/: P60.m  cost.m
test/P65/: P65.m  cost.m
test/P78/: P78.m  cost.m
test/P80/: P80.m  cost.m
test/P83/: P83.m  cost.m
test/P84/: P84.m  cost.m
test/P9/: P9.m  cost.m
test/P93/: P93.m  cost.m
test/Pharmacodynamics for Tumor Growth/: 200-1.1-65 data NOMAD.mat  200-1.1-65 data PDFO.mat  200-1.1-65.fig  NOMAD_Tumor.asv  NOMAD_Tumor.m  SOLNP_tumor.asv  SOLNP_tumor.m  cost.m  pdfo_tumor.m  plot_subroutine.m
test/Rosenbrock/: Rosenbrock.m
test/square/: L2.m  cost.m
(+20 files in other folders)
